# SinnerMan

./: .gitignore  README.md  pyproject.toml  requirements.txt
sinnerman/: app.py  log_logger.py  utils.py
sinnerman/assets/: icon_dock.icns
sinnerman/test/: test.py
sinnerman/workers/: key_manager.py  mover.py  scanner.py
